<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTheme"
    tools:context="com.github.tobiasmiosczka.kinohelfer.WageCalculatorActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        tools:context="com.github.tobiasmiosczka.kinohelfer.WageInfoFragment">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            tools:ignore="UselessParent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work_duration"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp"
                    tools:text="10:00" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/effective_duration"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvHoursAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/colorTheme"
                    android:textSize="30sp"
                    tools:text="09:15" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wage"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/tvWage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp"
                    tools:text="81.77" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textColor="@color/colorTheme"
                    android:textSize="30sp" />
            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/colorPrimary"

        android:textColor="@color/colorTheme"
        android:textSize="30sp"
        tools:text="13:00"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/etHourlyWage"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btTo"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/btFrom"
        android:layout_below="@+id/btFrom"

        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorTheme"
        android:textSize="30sp"
        tools:text="23:00" />

    <EditText
        android:id="@+id/etHourlyWage"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/btTo"
        android:layout_centerHorizontal="true"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:typeface="monospace"
        tools:ignore="LabelFor"
        tools:text="8.84" />

    <EditText
        android:id="@+id/etPercents"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignEnd="@+id/etHourlyWage"
        android:layout_below="@+id/etHourlyWage"
        android:ems="2"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:typeface="monospace"
        tools:ignore="LabelFor"
        tools:text="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btFrom"
        android:layout_alignBottom="@+id/btFrom"
        android:layout_toStartOf="@+id/btFrom"
        android:text="@string/duration_from"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btTo"
        android:layout_alignBottom="@+id/btTo"
        android:layout_toStartOf="@+id/btTo"
        android:text="@string/duration_to"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPercents"
        android:layout_alignBottom="@+id/etPercents"
        android:layout_toEndOf="@+id/etPercents"
        android:text="@string/percents"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPercents"
        android:layout_alignBottom="@+id/etPercents"
        android:layout_toStartOf="@+id/etPercents"
        android:text="@string/plus"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etHourlyWage"
        android:layout_alignBottom="@+id/etHourlyWage"
        android:layout_toEndOf="@+id/etHourlyWage"
        android:text="@string/wage_per_hour"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

</RelativeLayout>
